[package]
name = "ixy-ci"
version = "0.1.0"
authors = ["Boris-Chengbiao Zhou <bobo1239@web.de>"]
edition = "2018"

# TODO: Go through dependencies and disable unused features to improve compile time
[dependencies]
actix-web = "1.0.5"
serde = { version = "1.0.98", features = ["derive"] }
env_logger = "0.6.2"
log = "0.4.8"
hex = "0.4.0"
futures = "0.1.28"
serde_json = "1.0.40"
crossbeam-channel = "0.3.9"
actix-rt = "0.2.4"
hubcaps = { git = "https://github.com/softprops/hubcaps.git" }
openstack = "0.3.0"
# TODO: Update to 0.16 once jsonwebtoken v7 is released
# https://github.com/Keats/jsonwebtoken/pull/91
ring = "0.14.6"
waiter = "0.1.1"
fallible-iterator = "0.2.0"
ssh2 = "0.4.0"
snafu = "0.5.0"
reqwest = "0.9.20"
etherparse = "0.8.2"
pcap-file = { git = "https://github.com/courvoif/pcap-file.git", branch = "V1.0" }
byteorder = "1.3.2"
# Only needed for compatibility reasons... (see pcap_tester.rs)
failure = "0.1.5"
chrono = "0.4.9"
toml = "0.5.3"

[patch.crates-io]
# Current release doesn't include https://github.com/dtantsur/rust-osauth/pull/7 yet
# TODO: Remove once new version is released
"osauth" = { git = "https://github.com/dtantsur/rust-osauth.git" }
