[package]
name = "ixy-ci"
version = "0.1.0"
authors = ["Boris-Chengbiao Zhou <bobo1239@web.de>"]
edition = "2018"

# TODO: Go through dependencies and disable unused features to improve compile time
[dependencies]
env_logger = "0.7.1"
log = "0.4.8"
serde = { version = "1.0.98", features = ["derive"] }
serde_json = "1.0.40"
snafu = "0.6.0"
clap = "2.33"
crossbeam-channel = "0.4.0"
chrono = "0.4.9"
toml = "0.5.3"
hex = "0.4.0"
url = { version = "2.1.0", features = ["serde"] }

# Web
# TODO: Update `actix-rt` and `futures` once `actix-web` 2.0 is released
actix-web = "1.0.5"
actix-files = "0.1.6"
actix-rt = "0.2.4"
futures = "0.1.28"

# GitHub
hubcaps = { git = "https://github.com/softprops/hubcaps.git" }
# TODO: Update to 0.16 once jsonwebtoken v7 is released:
# https://github.com/Keats/jsonwebtoken/pull/91
ring = "0.14.6"

# OpenStack
openstack = "0.3.0"
fallible-iterator = "0.2.0"
waiter = "0.1.1"

# Worker
ssh2 = "0.6.0"
reqwest = "0.9.20"

# pcap
pcap-file = "1.1.1"
etherparse = "0.9.0"
byteorder = "1.3.2"
