[package]
name = "ixy-ci"
version = "0.1.0"
authors = ["Boris-Chengbiao Zhou <bobo1239@web.de>"]
edition = "2018"

# TODO: Go through dependencies and disable unused features to improve compile time
[dependencies]
env_logger = "0.8.1"
log = "0.4.8"
serde = { version = "1.0.98", features = ["derive"] }
serde_json = "1.0.40"
snafu = "0.6.0"
clap = "2.33"
chrono = "0.4.9"
toml = "0.5.3"
hex = "0.4.0"
url = { version = "2.1.0", features = ["serde"] }

# Web
actix-web = "3.1.0"
actix-files = "0.4.0"
actix-rt = "1.1.1"
futures = "0.3.6"

# GitHub
hubcaps = "0.6.2"
ring = "0.16.15"

# OpenStack
openstack = "0.4.0"
fallible-iterator = "0.2.0"
waiter = "0.1.1"

# Worker
ssh2 = "0.8.2"
reqwest = { version = "0.10.8", features = ["blocking"] }
crossbeam-utils = "0.8.0"

# pcap
# TODO: Other pcap library?
pcap-file = "1.1.1"
etherparse = "0.9.0"
byteorder = "1.3.2"
